fixes #1032 Dark mode issues
- back to a toggle for Dark Mode
- copy changes to NLP admin

--- a/nlp/admin/web/src/app/theme/components/header/header.component.scss
+++ b/nlp/admin/web/src/app/theme/components/header/header.component.scss
@@ -65,7 +65,15 @@
       }
     }
 
+    .darkmode-toggle {
+      position: relative;
+      top: 4px;
+      margin-left: 5px;
+      margin-right: 5px;
+    }
+
     .logo {
+      cursor: pointer;
       padding: 0 1.25rem;
       font-size: 1.75rem;
       @include nb-ltr(border-left, 1px solid nb-theme(divider-color));
@@ -73,6 +81,12 @@
       white-space: nowrap;
       text-decoration: none;
     }
+
+    .logo-img {
+      width: 45px;
+      filter: nb-theme(img-revert);
+    }
+
     .small {
       font-size: 20px;
     }
